--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -79,7 +79,7 @@
    
 	    <div id="quiz">
   <div id="q1">
-    <h4><span id="questionNumber">1</span>) <span id="question">Which one is not a car</span></h4>
+    <h4><span id="demo">1</span> <span id="demo"></span></h4>
 <button type="button" class="button1" value="Volvo">
               <p>Volvo</p>
             
@@ -105,6 +105,7 @@
         <center><button type="button" data-dismiss="modal" class="btn btn-primary .text-center">Save answer</button></center>
 		<div id="center">
   <div id="container">
+  <div id="demo">
       <div class="n">10</div>
     <div class="n">9</div>
     <div class="n">8</div>
@@ -309,5 +310,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="api.js"></script>
+
+
   </body>
 </html>
