--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -430,12 +430,19 @@
       ];
 
       infoWindow = new google.maps.InfoWindow;
+      
+   
+
 
       if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
+        navigator.geolocation.watchPosition(function(position) {
           var pos = {
             lat: position.coords.latitude,
             lng: position.coords.longitude,
+            nableHighAccuracy: false,
+            timeout: 3000,
+            maximumAge: 0,
+            distanceFilter: 1
           };
 
           var playerIcon = 'icon1.png';
