--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -444,7 +444,7 @@
             maximumAge: 0,
             distanceFilter: 1
           };
-
+          infoWindow.setPosition(pos);
           var playerIcon = 'icon1.png';
           var userlocation = new google.maps.Marker({
             position: pos,
