--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -431,15 +431,15 @@
 
       infoWindow = new google.maps.InfoWindow;
       
-   
+      var watching = false;
 
-      var id;
       if (navigator.geolocation) {
-        id = navigator.geolocation.watchPosition(function(position) {
+        navigator.geolocation.watchPosition(function(position) {
+          if(!watching) {
           var pos = {
             lat: position.coords.latitude,
             lng: position.coords.longitude,
-            nableHighAccuracy: false,
+            enableHighAccuracy: false,
             timeout: 3000,
             maximumAge: 0,
             distanceFilter: 1
@@ -452,8 +452,9 @@
             icon: playerIcon,
             animation: google.maps.Animation.DROP
           });
+          watching = true;
+        }
           map.setCenter(pos);
-           navigator.geolocation.clearWatch(id);
         }, function() {
           handleLocationError(true, infoWindow, map.getCenter());
         });
