--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -454,6 +454,7 @@
           });
             
           watching = true;
+          userlocation.setContent(pos);
         }
 
           map.setCenter(pos);
