--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -4,6 +4,11 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css.css">
   <style>
+  
+  *{
+  
+  
+  }
     html,
     body {
       font-family: Arial, sans-serif;
@@ -90,7 +95,7 @@
 
    </button>
 
-<button type="button" class="button12" OnClick="DisableButtons()" >
+<button type="button" class="button12" OnClick="DisableButtons(); myFunction()" >
                <p id="test1"></p> <!--Right Answer-->
 
    </button>
@@ -105,24 +110,16 @@
    </button>
   </div>
   </div>
+    <div class="countdown"></div>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js'></script>
+
+  
+
+    <script  src="index.js"></script>
+	<br>
 </div>
 </div>
       <div class="modal-footer">
-		<div id="countdown">
-  <div id="container">
-      <div class="n">10</div>
-    <div class="n">9</div>
-    <div class="n">8</div>
-    <div class="n">7</div>
-    <div class="n">6</div>
-    <div class="n">5</div>
-    <div class="n">4</div>
-    <div class="n">3</div>
-    <div class="n">2</div>
-    <div class="n">1</div>
-    <div class="n">0</div>
-  </div>
-</div>
       </div>
     </div>
     <!-- /.modal-content -->
@@ -533,9 +530,9 @@ $('button1').on('click', function() {
     $(this).prop('disabled', true);
 });
 
-   setTimeout(function(){
+  /* setTimeout(function(){
      $('#\\#myModal').modal('hide')
-     }, 10000);
+     }, 16000);*/
     </script>
         <script>
       jQuery('.button1').click(function() {
@@ -561,7 +558,11 @@ function DisableButtons()
 	$(".button12").attr("disabled", true);
 }
 
-
+function myFunction() {
+    document.getElementById("test1").innerHTML = "Rätt svar";
+	  setTimeout(function(){ $('#\\#myModal').modal('hide');; }, 1000);
+	
+}
   </script>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKaTEcXEwrYDxqz13MUpAQZXnv0N78_vk&callback=initMap">
