remove so you can't click outside modalbox and close it

--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -72,7 +72,7 @@
     <div id="map"></div>
   </div>
   	<!--Modal-->
-<div class="modal fade" id="#myModal">
+<div class="modal fade" id="#myModal" data-controls-modal="#mymodal" data-backdrop="static" data-keyboard="false">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -574,6 +574,7 @@ function myFunction() {
 	  setTimeout(function(){ $('#\\#myModal').modal('hide');; }, 1000);
 	
 }
+
   </script>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKaTEcXEwrYDxqz13MUpAQZXnv0N78_vk&callback=initMap">
