--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -442,7 +442,7 @@
             distanceFilter: 1
           };
           if (userlocation != null) {
-              userlocation.setPosition(latlon); 
+              userlocation.setPosition(pos); 
             } else {
               userlocation = new google.maps.Marker({
               position: pos,
