removing comment so setTimeout modal works

--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -542,9 +542,9 @@ $('button1').on('click', function() {
     $(this).prop('disabled', true);
 });
 
-  /* setTimeout(function(){
+   setTimeout(function(){
      $('#\\#myModal').modal('hide')
-     }, 16000);*/
+     }, 16000);
     </script>
         <script>
       jQuery('.button1').click(function() {
