change location for marker

--- a/google maps/Project_Code_4_WindowShoppingPart2.html
+++ b/google maps/Project_Code_4_WindowShoppingPart2.html
@@ -414,10 +414,11 @@
 
       // These are the real estate listings that will be shown to the user.
       // Normally we'd have these in a database instead.
-      var locations = [{
-          title: 'Skolan 607', location: { lat: 59.3134, lng: 18.1108 }
-        },
-        { title: 'Elite Hotel Marina Tower', location: { lat: 59.3147, lng: 18.1093 }
+      var locations = [
+        // {
+        //   title: 'Skolan 607', location: { lat: 59.3134, lng: 18.1108 }
+        // },
+        { title: 'Skolan', location: { lat: 59.313303, lng: 18.110104 }
         },
         { title: 'Boule & Berså', location: { lat: 59.3139, lng: 18.1061 }
         },
