--- a/google maps/googlemap.html
+++ b/google maps/googlemap.html
@@ -2,18 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="map.css">
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
 <body>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-  <div class="container">
-    <div class="options-box">
-      <h1>Amazing Fkn Game</h1>
-      <div>
-        <input id="show-listings" type="button" value="Show Listings">
-        <input id="hide-listings" type="button" value="Hide Listings">
-      </div>
-    </div>
     <div id="map"></div>
   </div>
   	<!--Modal-->
