username in leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -161,6 +161,10 @@
   </div>
 </div>
 
+<script>
+  var currentUser = window.location.hash.substr(1);
+  document.getElementById("leaderboardUser").innerHTML = currentUser;
+</script>
 
 
 
