--- a/leaderboard.html
+++ b/leaderboard.html
@@ -52,7 +52,7 @@
       <div class="container-fluid">
 	  <div class="player">
         <span class="fa fa-2x fa-user mx-auto d-block"></span>
-        <h4 class="text-white text-center">Player 1</h4>
+        <h4 class="text-white text-center" id="leaderboardUser"></h4>
 		</div>
         <hr>
         <ul class="nav nav-pills nav-fill">
@@ -67,31 +67,6 @@
         </div> -->
       <div class="tab-content">
         <div class="tab-pane fade show active" id="score" role="tabpanel">
-          <div>
-            <ul id="score" class="score list-group" style="min-height: 40vh; overflow-y: hidden; overflow-x: hidden;">
-              <li class="list-group-item d-flex justify-content-between align-items-center">Team Grape
-                <i class="fas fa-trophy"></i>
-                <span class="badge badge-primary badge-pill">Time: 12:34</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">Team Lemon
-                <i class="fas fa-minus-circle"></i>
-                <span class="badge badge-primary badge-pill">Time: 12:34</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">Team Pinapple
-                <i class="fas fa-minus-circle"></i>
-                <span class="badge badge-primary badge-pill">Time: 12:34</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">Team Grape
-                <i class="fas fa-trophy"></i>
-                <span class="badge badge-primary badge-pill">Time: 12:34</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">Team Apple
-                <i class="fas fa-minus-circle"></i>
-                <span class="badge badge-primary badge-pill">Time: 12:34</span>
-              </li>
-            </ul>
-          </div>
-          <br>
         </div>
         <div class="tab-pane fade" id="rank" role="tabpanel">
           <div>
@@ -133,7 +108,7 @@
               </li>
             </ul>
           </div>
-          <br>
+          </div>
         </div>
       </div>
     </div>
@@ -162,8 +137,38 @@
 </div>
 
 <script>
+  
   var currentUser = window.location.hash.substr(1);
   document.getElementById("leaderboardUser").innerHTML = currentUser;
+
+//get matchinfo
+
+
+fetch('http://localhost:3000/api/getallmatches/')
+.then(function(response) {
+  if(response.ok) {
+    response.json()
+  .then(function(json) {
+      var allmatches = json.Users;
+
+      console.log(allmatches);
+      let output;
+       allmatches.forEach(function(user){
+         output += `
+         <ul id="score1" class="score list-group" overflow-y: hidden; overflow-x: hidden;">
+            <li class="list-group-item d-flex justify-content-between align-items-center">${user.uname}
+                <i class="fas fa-trophy"></i>
+                <span class="badge badge-primary badge-pill">${user.totaltime}</span>
+              </li>
+          </ul>
+               
+                   `;
+       });
+       document.getElementById('score').innerHTML = output;
+  })
+}
+});
+
 </script>
 
 
