--- a/startpage.html
+++ b/startpage.html
@@ -28,7 +28,7 @@
         <a href="#" role="button" data-toggle="modal" data-target="#joinTeam"><li>Join a Team</li></a>
         <a href="#"><li>Settings</li></a>
         <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout"><li>Help</li></a>
-        <a href="index.html"><li>Logout</li></a>
+        <a href="../PHP/index.php"><li>Logout</li></a>
       </ul>
     </div>
   </nav>
