--- a/leaderboard.html
+++ b/leaderboard.html
@@ -144,7 +144,7 @@
 //get matchinfo
 
 
-fetch('http://localhost:3000/api/getallmatches/')
+fetch('http://team-grape.herokuapp.com/api/getallmatches/')
 .then(function(response) {
   if(response.ok) {
     response.json()
