--- a/startpage.html
+++ b/startpage.html
@@ -103,7 +103,9 @@
 <script>
   //save username from url
   var currentUser = window.location.hash.substr(1);
-
+console.log(currentUser); 
+console.log(starttime);  
+console.log(matchcode);
   //create random code.
 
   function makeid() {
@@ -141,7 +143,7 @@ function leaderboard() {
     window.location.href = 'googlemaps/googlemap.html?user=#' + currentUser + '?matchId=#'+ matchcode;
   
 
-     fetch('http://localhost:3000/api/startmatch/' + currentUser + '/' + matchcode + '/' + starttime, {
+     fetch('http://team-grape.herokuapp.com/api/startmatch/' + currentUser + '/' + matchcode + '/' + starttime, {
        method:'POST',
        headers: {
          'Accept': 'application/json, text/plain, */*',
