--- a/startpage.html
+++ b/startpage.html
@@ -113,15 +113,27 @@
     return text;
   }
   var matchcode = makeid();
-console.log(matchcode);
 //Start time of match when it starts
-  function myFunction() {
+  function getStartTime() {
     var d = new Date();
     n = d.getTime();    
     return n;
 }
-var starttime = myFunction();
-console.log(starttime);
+var starttime = getStartTime();
+//This will start new match and add in database. We call this function when you click on start match.
+
+function startNewMatch(){
+fetch('https://team-grape.herokuapp.com/api/startmatch/', {
+        method:'POST',
+        headers: {
+          'Accept': 'application/json, text/plain, */*',
+          'Content-type':'application/json'
+        },
+        body:JSON.stringify({uname: currentUser, matchcode: matchcode, starttime: starttime})
+      })
+      .then((res) => res.json())
+      .then((data) => console.log(data))
+    }
 document.getElementById("leaderboard").addEventListener("click", leaderboard);
 
 function leaderboard() {
@@ -138,31 +150,9 @@ function leaderboard() {
      e.preventDefault();
    
     window.location.href = 'googlemaps/googlemap.html?user=#' + currentUser + '?matchId=#'+ matchcode;
-  
+    startNewMatch();
 
-  //    fetch('https://team-grape.herokuapp.com/api/startmatch/', {
-  //      method:'POST',
-  //      headers: {
-  //        'Accept': 'application/json, text/plain, */*',
-  //        'Content-type':'application/json'
-  //      },
-  //      body:JSON.stringify({uname: currentUser, matchcode: matchcode, starttime: starttime})
-  //    })
-  //    .then((res) => res.json())
-  //    .then((data) => console.log(data))     
-  // }
-
-  fetch('https://team-grape.herokuapp.com/api/startmatch/', {
-        method:'POST',
-        headers: {
-          'Accept': 'application/json, text/plain, */*',
-          'Content-type':'application/json'
-        },
-        body:JSON.stringify({uname: currentUser, matchcode: matchid(), starttime: myFunction()})
-      })
-      .then((res) => res.json())
-      .then((data) => console.log(data))
-    }
+}
 
 </script>
 
