--- a/googlemaps/googlemap.html
+++ b/googlemaps/googlemap.html
@@ -20,19 +20,19 @@
    <div id="q1">
     <h1 id="demo"></h1>
 	<div id="scramble-buttons">
-    <button type="button" class="button1" OnClick="DisableButtons(); incorrect1(); losingsound();">
+    <button type="button" class="button1" OnClick="DisableButtons(); incorrect1(); losingsound(); end();">
     <p id="test"></p></button>
 <audio id="bflat"> </audio>
- <button type="button" class="button12" OnClick="DisableButtons(); correct();counter(); winningsound();" >
+ <button type="button" class="button12" OnClick="DisableButtons(); correct();counter(); winningsound(); end();" >
  
  <p id="test1"></p> <!--correct Answer-->
  </button>
 
-   <button type="button" class="button1" OnClick="DisableButtons(); incorrect2(); losingsound();"  >
+   <button type="button" class="button1" OnClick="DisableButtons(); incorrect2(); losingsound(); end();"  >
    <p id="test2"></p>
    </button>
    
-   <button type="button" class="button1" OnClick="DisableButtons(); incorrect3(); losingsound();"  >
+   <button type="button" class="button1" OnClick="DisableButtons(); incorrect3(); losingsound(); end();"  >
      <p id="test3"></p>
 	</button>
  </div>
@@ -46,9 +46,28 @@
 </div>
 </div>
 </div>
-<center><button class="btn btn-primary knapp startclock" style="margin-top: 5px" id="myButton">Checking position...</button>  
+<center><button class="btn btn-primary knapp startclock" style="margin-top: 5px" id="myButton" onclick="counterss()">Checking position...</button>  
 </center><output id=counter>0</output><p class="correct_answers ">/5 Correct</p>
 </div>
+
+<div class="modal fade" id="#myModal1" data-dismiss="modal" data-controls-modal="#mymodal" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+       <h1 class="modal-title"><center>You have a score of</center></h1>
+ </div>
+<div class="modal-body">
+<center>
+<div id="border">
+<output id=rett>0</output><p class="correct_answerss ">/5 </p>
+</div>
+
+<button onclick="location.href = '../leaderboard.html';" class="btn btn-danger" >Quit Game</button>
+</center>
+</div>
+</div>
+</div>
+
   <script src='http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js'></script>
   <script src="index.js"></script>
   <script src="map.js"></script>
