--- a/leaderboard.html
+++ b/leaderboard.html
@@ -156,7 +156,7 @@ fetch('http://team-grape.herokuapp.com/api/getallmatches/')
          output += `
          <ul class="score list-group" overflow-y: hidden; overflow-x: hidden;">
             <li class="list-group-item d-flex justify-content-between align-items-center">${user.uname}
-                <i class="fas fa-trophy"></i>
+                <i class="fas fa-trophy"></i>${user.correct_answer}
                 <span class="badge badge-primary badge-pill">${user.startTime}</span>
               </li>
           </ul>
