--- a/leaderboard.html
+++ b/leaderboard.html
@@ -144,7 +144,7 @@
 //get matchinfo
 
 
-fetch('http://team-grape.herokuapp.com/api/getallmatches/')
+fetch('https://team-grape.herokuapp.com/api/getallmatches/')
 .then(function(response) {
   if(response.ok) {
     response.json()
@@ -156,8 +156,8 @@ fetch('http://team-grape.herokuapp.com/api/getallmatches/')
          output += `
          <ul class="score list-group" style="max-height: auto; overflow-y: hidden; overflow-x: hidden;">
             <li class="list-group-item d-flex justify-content-between align-items-center">${user.uname}
-                <i class="fas fa-trophy"></i>${user.correct_answer}
-                <span class="badge badge-primary badge-pill">${user.startTime}</span>
+                <i class="fas fa-trophy"></i>
+                <span class="badge badge-primary badge-pill">${user.endtime}</span>
               </li>
           </ul>
                
