--- a/leaderboard.html
+++ b/leaderboard.html
@@ -157,7 +157,7 @@ fetch('https://team-grape.herokuapp.com/api/getallmatches/')
          <ul class="score list-group" style="max-height: auto; overflow-y: hidden; overflow-x: hidden;">
             <li class="list-group-item d-flex justify-content-between align-items-center">${user.uname}
                 <i class="fas fa-trophy"></i>
-                <span class="badge badge-primary badge-pill">${user.endtime}</span>
+                <span class="badge badge-primary badge-pill">${user.totaltime}</span>
               </li>
           </ul>
                
