--- a/googlemaps/googlemap.html
+++ b/googlemaps/googlemap.html
@@ -20,24 +20,24 @@
    <div id="q1">
     <h1 id="demo"></h1>
 	<div id="scramble-buttons">
-    <button type="button" class="button1" OnClick="DisableButtons(); incorrect1(); losingsound(); end();">
+    <button type="button" class="button1" OnClick="DisableButtons(); incorrect1(); losingsound(); end(); refresh();">
     <p id="test"></p></button>
 <audio id="bflat"> </audio>
- <button type="button" class="button12" OnClick="DisableButtons(); correct();counter(); winningsound(); end();" >
- 
+ <button type="button" class="button12" OnClick="DisableButtons(); correct();counter(); winningsound(); end();refresh(e);" >
+
  <p id="test1"></p> <!--correct Answer-->
  </button>
 
-   <button type="button" class="button1" OnClick="DisableButtons(); incorrect2(); losingsound(); end();"  >
+   <button type="button" class="button1" OnClick="DisableButtons(); incorrect2(); losingsound(); end();refresh();"  >
    <p id="test2"></p>
    </button>
-   
-   <button type="button" class="button1" OnClick="DisableButtons(); incorrect3(); losingsound(); end();"  >
+
+   <button type="button" class="button1" OnClick="DisableButtons(); incorrect3(); losingsound(); end();refresh();" >
      <p id="test3"></p>
 	</button>
  </div>
 </div>
-<center><span id="count"></span></center>	
+<center><span id="count"></span></center>
 <div class="startclock"></div>
 </div>
 </div>
@@ -46,7 +46,7 @@
 </div>
 </div>
 </div>
-<center><button class="btn btn-primary knapp startclock" style="margin-top: 5px" id="myButton" onclick="counterss()">Checking position...</button>  
+<center><button class="btn btn-primary knapp startclock" style="margin-top: 5px" id="myButton" onclick="counterss()">Checking position...</button>
 </center><output id=counter>0</output><p class="correct_answers ">/5 Correct</p>
 </div>
 
