--- a/googlemaps/googlemap.html
+++ b/googlemaps/googlemap.html
@@ -20,19 +20,19 @@
    <div id="q1">
     <h1 id="demo"></h1>
 	<div id="scramble-buttons">
-    <button type="button" class="button1" OnClick="DisableButtons(); incorrect1(); losingsound(); end();">
+    <button type="button" class="button1" OnClick="DisableButtons(); incorrect1(); losingsound(); end(); refresh();">
     <p id="test"></p></button>
 <audio id="bflat"> </audio>
- <button type="button" class="button12" OnClick="DisableButtons(); correct();counter(); winningsound(); end();" >
+ <button type="button" class="button12" OnClick="DisableButtons(); correct();counter(); winningsound(); end();refresh();" >
  
  <p id="test1"></p> <!--correct Answer-->
  </button>
 
-   <button type="button" class="button1" OnClick="DisableButtons(); incorrect2(); losingsound(); end();"  >
+   <button type="button" class="button1" OnClick="DisableButtons(); incorrect2(); losingsound(); end();refresh();"  >
    <p id="test2"></p>
    </button>
    
-   <button type="button" class="button1" OnClick="DisableButtons(); incorrect3(); losingsound(); end();"  >
+   <button type="button" class="button1" OnClick="DisableButtons(); incorrect3(); losingsound(); end();refresh();" >
      <p id="test3"></p>
 	</button>
  </div>
@@ -59,7 +59,7 @@
 <div class="modal-body">
 <center>
 <div id="border">
-<output id=rett>0</output><p class="correct_answerss ">/5 </p>
+<output id=rett>5</output><p class="correct_answerss ">/5 </p>
 </div>
 
 <button onclick="location.href = '../leaderboard.html';" class="btn btn-danger" >Quit Game</button>
